k8s/back-agent-neural-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-agent-neural-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-agent-neural
  template:
    metadata:
      labels:
        app: back-agent-neural
    spec:
      containers:
        - name: back-agent-neural
          image: jmalisz/web-chess-back-agent-neural
          resources:
            requests:
              memory: 2Gi
              cpu: 250m
            limits:
              memory: 2Gi
