k8s/back-websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-websocket-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-websocket
  template:
    metadata:
      labels:
        app: back-websocket
    spec:
      containers:
        - name: back-websocket
          image: jmalisz/web-chess-back-websocket
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
