k8s/back-websocket-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-websocket-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-websocket-redis
  template:
    metadata:
      labels:
        app: back-websocket-redis
    spec:
      containers:
        - name: back-websocket-redis
          image: redis/redis-stack
          resources:
            requests:
              memory: 2Gi
              cpu: 500m
            limits:
              memory: 2Gi
