k8s/back-websocket-redis-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-websocket-redis-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: back-websocket-redis
  ports:
    - name: back-websocket-redis
      protocol: TCP
      port: 3000
      targetPort: 6379
