k8s/back-websocket-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-websocket-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: back-websocket
  ports:
    - name: back-websocket
      protocol: TCP
      port: 3000
      targetPort: 3000
